# CSD2

./: .gitignore  CMakeLists.txt  README.md
CSD2a/python_basics/exercises/: euclid_deviationFactor.py  euclid_dictionary.py  euclid_duration.py  euclid_player.py  euclid_timestamps.py  inp_v3.py  midifile_test.py  rotation_fix.py  (+1 more)
CSD2b/: CMakeLists.txt
CSD2b/JuceTest/: CMakeLists.txt
CSD2b/exercises/: CMakeLists.txt
CSD2b/synthSong/: CMakeLists.txt  notes.txt
CSD2b/synthSong/codebase/: CMakeLists.txt  appController.cpp  appController.h  audiocomponent.h  callback.cpp  callback.h  main.cpp  oscillator.cpp  oscillator.h  sine.cpp  sine.h  utils.cpp  utils.h
CSD2b/synthSong/codebase/Melody/: CMakeLists.txt  melody.cpp  melody.h  note.cpp  note.h
CSD2b/synthSong/codebase/Synth/: CMakeLists.txt  additive.cpp  additive.h  fm.cpp  fm.h  oscillator.cpp  oscillator.h  synth.cpp  synth.h
CSD2b/synthSong/codebase/Synth/WaveTypes/: CMakeLists.txt  saw.cpp  saw.h  sine.cpp  sine.h  square.cpp  square.h
CSD2c/: CMakeLists.txt
CSD2c/ShaperStack/: CMakeLists.txt  learningGoals.md  syntax_reference.md
CSD2c/codeclinics/: CMakeLists.txt
CSD2c/self_study/: 00_syntax_reference.md  CMakeLists.txt
CSD2c/self_study/01_circular_buffer_test/: CMakeLists.txt  circBuffer.cpp  circBuffer.hpp  main.cpp  output.csv  plot.py  writeToFile.cpp
CSD2c/self_study/01_circular_buffer_test/oscillators/: CMakeLists.txt  oscillator.cpp  square.hpp
CSD2c/self_study/08_stereo/: CMakeLists.txt  circBuffer.cpp  circBuffer.hpp  interpolation.hpp  main.cpp
CSD2c/self_study/08_stereo/oscillators/: CMakeLists.txt  oscillator.cpp  oscillator.hpp  square.cpp  square.hpp
CSD2c/self_study/08_stereo/utils/: CMakeLists.txt  circBuffer_test.csv  interpolation_test.csv  output.csv
CSD2c/sessions/: CMakeLists.txt
python_basics/: inp_check.py  irregular_beat_generator_v1.py  playsound.py
python_basics/beat_generator_presets/: ._16-4.txt  ._hopeThisStillWorks.txt  ._test_preset.txt  16-4.txt  examplePreset.txt  hopeThisStillWorks.txt  test_preset.txt
python_basics/exercises/: cumulativeList_test.py  deviationFactor_test.py  dictTimestamp_test.py  euclid_beat_generator.py  euclid_deviationFactor.py  euclid_dictionary.py  euclid_duration.py  euclid_multiTrack.py  euclid_player.py  euclid_rotation_fix.py  euclid_timestamps.py  functionAndForloop_test.py  inp_old.py  inp_v2.py  inp_v3.py  irregular_beat_generator_v1.py  list_transform.py  rotation_fix.py  timestamp_dict_player.py  timestamp_samplePlayer.py
python_basics/irregularBeatGenerator/: inp.py  inp_check.py  irregular_beat_generator.py  irregular_beat_generator_v1.py
(+136 files in other folders)
